# a-verso

./: .gitignore  TODO.txt  a-verso-1.cbp  a-verso-1.layout  a-verso-1.workspace  a-verso-1.workspace.layout  a-verso.cbp  a-verso.depend  a-verso.layout  a-verso.workspace  a-verso.workspace.layout
0/: Camera.cc  Camera.hh  Shader.cc  Shader.hh  Verso.cc  Verso.hh  a-verso.cc  architect.cc  architect.hh  color.hh  colors.hh  common.hh  develop-1.cc  develop-2-Game.cc  develop-2-Game.hh  develop-2-main.cc  develop-2.cc  develop-3-Game.cc  develop-3-Game.hh  develop-3-main.cc  develop-3.cc  draw.cc  draw.hh  gl.cc  gl.hh  objects.cc  objects.hh  quadric.cc  quadric.hh  shapes.cc  shapes.hh  verso-gl.cc  verso-gl.hh  verso.cc  verso.hh
1/: CMakeLists.txt  animation-1.cpp  animation-1.h  scenary.cpp  scenary.hpp  vcpkg-configuration.json  vcpkg.json
1/devel/: CMakeLists.txt  Space.cpp  Space.h  animations.cpp  animations.h  glew-examples.cpp  glew-examples.h  glfw-examples.cpp  glfw-examples.h  sdl-examples.cpp  sdl-examples.h  vcpkg.json
1/devel/glfw/: scenary.cpp  scenary.hpp
1/sdl/: scenary.cpp  scenary.hpp
1/tests/: CMakeLists.txt  Space.cpp  Space.h  animation-1.cpp  animation-1.h  animations.cpp
devel/1/: CMakeLists.txt  colors.hh  common.cc  common.hh  glfw.cc  glut.cc  scenaries.cc  scenary.cc  scenary.hh  shader.cc  shader.hh  shapes.cc  shapes.hh  verso.cc
devel/1/glfw/: scenary.cc  scenary.hh
devel/1/glut/: scenary.cc  scenary.hh
devel/1/ogre/: example-1.cc  example-2.cc
devel/1/sdl/animation-1/: CMakeLists.txt  animation-1.cpp  animation-1.h
devel/1/sdl/animation-2/: animation.cc  animation.hh  example-1.cc  scenary.cc  scenary.hh  space.cc  space.hh  text.cc
devel/1/shaders/: shapes.vs
tests/: develop-1.cc  develop-2-Game.cc  develop-2-Game.hh  develop-2-main.cc  develop-3-Game.cc  develop-3-Game.hh  develop-3-main.cc  develop-3.cc  develop-Verso-main.cc  develop-Verso.cc  develop-Verso.hh  game-v0.cc  game-v0.hh  game.cc  main.cc  v0.cc  v0.hh
tests/BK-LM3GP/: main.cc
tests/basics/: Shader.cc  Shader.hh  colors.hh  common.hh  context.hh  main.cc  shader.cc  shader.hh
tests/ligth/: main.cc  verso.cc
tests/shaders/: developing.vs  shapes.fs
tests/triangle/: SimpleFragmentShader-0.fragmentshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader-0.vertexshader  SimpleVertexShader-2.vertexshader
tests/verso/: main.cc  verso-2-v0.cc  verso-2-v0.hh  verso-v0.cc  verso-v0.hh
tests/verso/Shaders/: developing.fs
tests/verso/resources/shaders/: perspective.fs  perspective.vs  text.fs  text.vs
(+4 files in other folders)
